--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
   "expo": {
     "name": "Bike & Bed Global",
-    "slug": "Bike & Bed Global",
+    "slug": "bike-bed-global",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/image 4.svg",
+    "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/image 4.svg",
+      "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#111827"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -19,12 +20,19 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/image 4.svg",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#111827"
       }
     },
     "web": {
-      "favicon": "./assets/images/image 4.svg"
+      "favicon": "./assets/images/favicon.png",
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "experiments": {
+      "typedRoutes": true
     }
   }
 }
