--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "expo-nativewind-app",
+  "name": "bike-bed-global",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "dev": "expo start",
@@ -10,18 +10,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-safe-area-context": "4.5.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "expo": "~52.0.30",
+    "expo-router": "~4.0.17",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.1.0",
+    "@expo/vector-icons": "^14.0.4",
+    "expo-font": "~12.0.10",
+    "expo-splash-screen": "~0.29.13",
+    "expo-linking": "~7.0.3",
+    "expo-constants": "~17.0.3",
+    "@supabase/supabase-js": "^2.39.0",
+    "@react-native-async-storage/async-storage": "1.25.0",
+    "react-native-maps": "1.18.0",
+    "lucide-react-native": "^0.344.0",
+    "react-native-svg": "15.8.0",
+    "react-i18next": "^13.5.0",
+    "i18next": "^23.7.16"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.2.79",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
