--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@supabase/supabase-js": "^2.39.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~52.0.30",
+    "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.3",
     "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
+    "i18next": "^23.7.16",
+    "lucide-react-native": "^0.344.0",
     "react": "18.3.1",
+    "react-i18next": "^13.5.0",
     "react-native": "0.76.5",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
-    "@expo/vector-icons": "^14.0.4",
-    "expo-font": "~12.0.10",
-    "expo-splash-screen": "~0.29.13",
-    "expo-linking": "~7.0.3",
-    "expo-constants": "~17.0.3",
-    "@supabase/supabase-js": "^2.39.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "react-native-maps": "1.18.0",
-    "lucide-react-native": "^0.344.0",
-    "react-native-svg": "15.8.0",
-    "react-i18next": "^13.5.0",
-    "i18next": "^23.7.16"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
