--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "expo": "~52.0.30",
     "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "^14.1.5",
     "expo-file-system": "~18.0.12",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.13",
@@ -30,6 +32,7 @@
     "react-i18next": "^13.5.0",
     "react-native": "0.76.5",
     "react-native-maps": "1.18.0",
+    "react-native-popup-menu": "^0.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
     "react-native-svg": "15.8.0"
