--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@supabase/supabase-js": "^2.39.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~52.0.30",
