--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
+    "expo-permissions": "^14.4.0",
+    "expo-print": "~14.0.3",
     "expo-router": "~4.0.17",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "i18next": "^23.7.16",
@@ -33,15 +36,19 @@
     "react": "18.3.1",
     "react-i18next": "^13.5.0",
     "react-native": "0.76.5",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-maps": "1.18.0",
+    "react-native-permissions": "^5.4.1",
     "react-native-popup-menu": "^0.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "expo-media-library": "~17.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.2.79",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "typescript": "~5.3.3"
   },
   "private": true
