--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@supabase/supabase-js": "^2.39.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~52.0.30",
@@ -25,6 +25,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
+    "expo-media-library": "~17.0.6",
     "expo-permissions": "^14.4.0",
     "expo-print": "~14.0.3",
     "expo-router": "~4.0.17",
@@ -42,8 +43,7 @@
     "react-native-popup-menu": "^0.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
-    "react-native-svg": "15.8.0",
-    "expo-media-library": "~17.0.6"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
