--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "react": "18.3.1",
     "react-i18next": "^13.5.0",
     "react-native": "0.76.5",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-maps": "1.18.0",
+    "react-native-paper": "^5.14.5",
     "react-native-permissions": "^5.4.1",
     "react-native-popup-menu": "^0.18.0",
     "react-native-safe-area-context": "4.12.0",
@@ -49,6 +51,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~18.2.79",
     "@types/react-native-html-to-pdf": "^0.8.3",
+    "@types/uuid": "^10.0.0",
     "typescript": "~5.3.3"
   },
   "private": true
